# 82000

./: .clang-format  CMakeLists.txt  README.md
Executables/: CMakeLists.txt  FindNextNumber.cpp
Tools/: BigInt.cpp  BigInt.hpp  CMakeLists.txt  TestHelper.cpp  TestHelper.hpp  TestNumber.cpp  TestNumber.hpp
Tools/Tests/: CMakeLists.txt
Tools/Tests/Test_BigInt/: CMakeLists.txt  Test_BigInt.cpp
Tools/Tests/Test_TestNumber/: CMakeLists.txt  Test_TestNumber.cpp
